MBS-10478: Fix header out of view port on mobile devices

--- a/styles.scss
+++ b/styles.scss
@@ -429,6 +429,9 @@ body.block_ai_chat_openfull {
 
             .modal-content {
                 min-height: calc(100vh - 3.5rem);
+                @media (max-width: 576px) {
+                    min-height: calc(100vh - 8rem);
+                }
             }
         }
 
